maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:42: error: value i of type Int does not take type parameters.
        return i[Int]
                ^JediEscaper:38: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to getMondeLargeur() - 1) {
         ^JediEscaper:51: error: value j of type Int does not take type parameters.
      return j[Int]
              ^JediEscaper:49: error: type mismatch;
 found   : Unit
 required: Int
  for (j <- 0 to getMondeHauteur() - 1) {
         ^